--- a/P1_UD.ipynb
+++ b/P1_UD.ipynb
@@ -66,11 +66,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# importing some useful packages\n",
+    "#importing some useful packages\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
@@ -88,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#reading in an image\n",
@@ -138,10 +140,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -241,117 +245,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My Results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_lines(img, lines, y_top, y_bot, color=[255, 0, 0], thickness=2):\n",
-    "    k_left=[]\n",
-    "    o_left_x=[]\n",
-    "    o_left_y=[]\n",
-    "    k_right=[]\n",
-    "    o_right_x=[]\n",
-    "    o_right_y=[]\n",
-    "    for line in lines:\n",
-    "        for x1,y1,x2,y2 in line:\n",
-    "            if (y1-y2)/(x1-x2)<-0.3:\n",
-    "                k_left.append((y1-y2)/(x1-x2))\n",
-    "                o_left_x.append(x1)\n",
-    "                o_left_x.append(x2)\n",
-    "                o_left_y.append(y1)\n",
-    "                o_left_y.append(y2)\n",
-    "            elif (y1-y2)/(x1-x2)>0.3:\n",
-    "                k_right.append((y1-y2)/(x1-x2))\n",
-    "                o_right_x.append(x1)\n",
-    "                o_right_x.append(x2)\n",
-    "                o_right_y.append(y1)\n",
-    "                o_right_y.append(y2)\n",
-    "    #print(k_left,np.mean(k_left))\n",
-    "    cv2.line(img, (int((y_top-np.mean(o_left_y))/np.mean(k_left)+np.mean(o_left_x)), int(y_top)),\\\n",
-    "             (int((y_bot-np.mean(o_left_y))/np.mean(k_left)+np.mean(o_left_x)), int(y_bot)), color, thickness) \n",
-    "    cv2.line(img, (int((y_top-np.mean(o_right_y))/np.mean(k_right)+np.mean(o_right_x)), int(y_top)),\\\n",
-    "             (int((y_bot-np.mean(o_right_y))/np.mean(k_right)+np.mean(o_right_x)), int(y_bot)), color, thickness) \n",
-    "    \n",
-    "\n",
-    "def project1(image_name):\n",
-    "    ##### Parameter definition\n",
-    "    region_x_left=480\n",
-    "    region_x_right=505\n",
-    "    region_y_top=320\n",
-    "    \n",
-    "    ##### Read figure\n",
-    "    if type(image_name) is str:\n",
-    "        image = mpimg.imread(image_name)\n",
-    "    else:\n",
-    "        image=image_name\n",
-    "    #image = mpimg.imread(image_name)\n",
-    "    ##### Print figure\n",
-    "    #print('This image is:', type(image), 'with dimensions:', image.shape)\n",
-    "    \n",
-    "    ##### Figure definition\n",
-    "    #fig = plt.figure()\n",
-    "    #fig.add_subplot(224)\n",
-    "    #plt.imshow(image)\n",
-    "\n",
-    "    ##### Grayscale image\n",
-    "    gray=cv2.cvtColor(image, cv2.COLOR_RGB2GRAY)\n",
-    "    #plt.imshow(gray)\n",
-    "\n",
-    "    ##### Gaussian smoothing\n",
-    "    kernel_size=3\n",
-    "    blur_gray = cv2.GaussianBlur(gray,(kernel_size, kernel_size),0)\n",
-    "\n",
-    "    ##### Canny definition\n",
-    "    low_threshold=75\n",
-    "    high_threshold=150\n",
-    "    edges=cv2.Canny(blur_gray, low_threshold, high_threshold)\n",
-    "    #plt.imshow(edges)\n",
-    "\n",
-    "    ##### Mask and polygon creation\n",
-    "    mask = np.zeros_like(edges)\n",
-    "    #fig.add_subplot(221)\n",
-    "    #plt.imshow(mask)\n",
-    "    ignore_mask_color = 255\n",
-    "    imshape = image.shape\n",
-    "    vertices = np.array([[(0,imshape[0]),(region_x_left, region_y_top),\\\n",
-    "                          (region_x_right,region_y_top), (imshape[1],imshape[0])]], dtype=np.int32)\n",
-    "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
-    "    #fig.add_subplot(222)\n",
-    "    #plt.imshow(mask)\n",
-    "    masked_edges = cv2.bitwise_and(edges, mask)\n",
-    "    #fig.add_subplot(223)\n",
-    "    #plt.imshow(masked_edges)\n",
-    "\n",
-    "    ##### Hough transform\n",
-    "    rho=1\n",
-    "    theta=np.pi/180\n",
-    "    threshold=1\n",
-    "    min_line_len=10\n",
-    "    max_line_gap=1\n",
-    "    line_image=np.zeros_like(image)\n",
-    "    lines = cv2.HoughLinesP(masked_edges, rho, theta, threshold, np.array([]),\n",
-    "                                min_line_len, max_line_gap)\n",
-    "    #for line in lines:\n",
-    "    #    for x1,y1,x2,y2 in line:\n",
-    "    #        cv2.line(line_image, (x1, y1), (x2, y2), color=[255, 0, 0], thickness=4)\n",
-    "    draw_lines(line_image, lines, region_y_top, imshape[0], color=[255, 0, 0], thickness=8)\n",
-    "\n",
-    "    ##### Overlap images\n",
-    "    lines_edges = cv2.addWeighted(image, 1.0, line_image, 1, 0) \n",
-    "    #fig = plt.figure()\n",
-    "    #plt.imshow(lines_edges)\n",
-    "    return lines_edges"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Test Images\n",
     "\n",
     "Build your pipeline to work on the images in the directory \"test_images\"  \n",
@@ -359,8 +252,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "import os\n",
     "os.listdir(\"test_images/\")"
@@ -386,19 +283,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images directory.\n",
-    "import os\n",
-    "file_list=os.listdir(\"test_images/\")\n",
-    "print (file_list)\n",
-    "for file in file_list:\n",
-    "    if file.endswith(\"jpg\"):\n",
-    "        image=project1(\"test_images/\"+file)\n",
-    "        fig = plt.figure()\n",
-    "        plt.imshow(image)"
+    "# then save them to the test_images directory."
    ]
   },
   {
@@ -427,29 +318,32 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "# Import everything needed to edit/save/watch video clips\n",
     "from moviepy.editor import VideoFileClip\n",
-    "from IPython.display import HTML\n",
-    "import os"
+    "from IPython.display import HTML"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
    "source": [
     "def process_image(image):\n",
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "    return project1(image)\n",
-    "    # return result"
+    "\n",
+    "    return result"
    ]
   },
   {
@@ -462,19 +356,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
-    "directory = os.path.dirname(white_output)\n",
-    "if not os.path.exists(directory):\n",
-    "    os.mkdir(directory)\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
     "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
     "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
-    "#clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
+    "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
+    "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
     "white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(white_output, audio=False)"
    ]
@@ -489,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -520,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
@@ -537,7 +434,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -570,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
@@ -587,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -616,12 +519,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
